// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processTypography - can process weights 1`] = `
{
  "root": "--typography_fluid-arial-2xl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);
--typography_fluid-arial-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);
--typography_fluid-arial-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);
--typography_fluid-arial-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);
--typography_fluid-arial-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);
--typography_fluid-arial-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);
--typography_fluid-arial-2xs: clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem);
--typography_fluid-arial-pow-narrow: 20;
--typography_fluid-arial-pow-wide: 89.6875;
--typography_fluid-arial-pow-size-narrow: 0.875;
--typography_fluid-arial-pow-size-wide: 1;
--typography_fluid-arial-pow-ratio-narrow: 1.25;
--typography_fluid-arial-pow-ratio-wide: 1.25;
--typography_fluid-arial-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem);
--typography_fluid-arial-pow-at-narrow: calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)));
--typography_fluid-arial-pow-at-wide: calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid));
--typography_fluid-arial-pow-2xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3));
--typography_fluid-arial-pow-xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2));
--typography_fluid-arial-pow-l: calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide));
--typography_fluid-arial-pow-m: calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide));
--typography_fluid-arial-pow-s: calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow));
--typography_fluid-arial-pow-xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2));
--typography_fluid-arial-pow-2xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3));
--typography-weight-arial-regular: 500;",
}
`;

exports[`processTypography - can process weights 2`] = `
[
  [
    "typography_fluid.arial@2xl",
    {
      "key": "--typography_fluid-arial-2xl",
      "sourcePath": "typography_fluid.arial@2xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem)",
      "variable": "--typography_fluid-arial-2xl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);",
    },
  ],
  [
    "typography_fluid.arial@xl",
    {
      "key": "--typography_fluid-arial-xl",
      "sourcePath": "typography_fluid.arial@xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem)",
      "variable": "--typography_fluid-arial-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);",
    },
  ],
  [
    "typography_fluid.arial@l",
    {
      "key": "--typography_fluid-arial-l",
      "sourcePath": "typography_fluid.arial@l",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem)",
      "variable": "--typography_fluid-arial-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);",
    },
  ],
  [
    "typography_fluid.arial@m",
    {
      "key": "--typography_fluid-arial-m",
      "sourcePath": "typography_fluid.arial@m",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem)",
      "variable": "--typography_fluid-arial-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);",
    },
  ],
  [
    "typography_fluid.arial@s",
    {
      "key": "--typography_fluid-arial-s",
      "sourcePath": "typography_fluid.arial@s",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem)",
      "variable": "--typography_fluid-arial-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);",
    },
  ],
  [
    "typography_fluid.arial@xs",
    {
      "key": "--typography_fluid-arial-xs",
      "sourcePath": "typography_fluid.arial@xs",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem)",
      "variable": "--typography_fluid-arial-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);",
    },
  ],
  [
    "typography_fluid.arial@2xs",
    {
      "key": "--typography_fluid-arial-2xs",
      "sourcePath": "typography_fluid.arial@2xs",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem)",
      "variable": "--typography_fluid-arial-2xs: clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.narrow",
    {
      "key": "--typography_fluid-arial-pow-narrow",
      "sourcePath": "typography_fluid.arial.pow.narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "20",
      "variable": "--typography_fluid-arial-pow-narrow: 20;",
    },
  ],
  [
    "typography_fluid.arial.pow.wide",
    {
      "key": "--typography_fluid-arial-pow-wide",
      "sourcePath": "typography_fluid.arial.pow.wide",
      "tier": "primitive",
      "type": "typography",
      "value": "89.6875",
      "variable": "--typography_fluid-arial-pow-wide: 89.6875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-narrow",
    {
      "key": "--typography_fluid-arial-pow-size-narrow",
      "sourcePath": "typography_fluid.arial.pow.size-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "0.875",
      "variable": "--typography_fluid-arial-pow-size-narrow: 0.875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-wide",
    {
      "key": "--typography_fluid-arial-pow-size-wide",
      "sourcePath": "typography_fluid.arial.pow.size-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1",
      "variable": "--typography_fluid-arial-pow-size-wide: 1;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-narrow",
    {
      "key": "--typography_fluid-arial-pow-ratio-narrow",
      "sourcePath": "typography_fluid.arial.pow.ratio-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-pow-ratio-narrow: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-wide",
    {
      "key": "--typography_fluid-arial-pow-ratio-wide",
      "sourcePath": "typography_fluid.arial.pow.ratio-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-pow-ratio-wide: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.fluid",
    {
      "key": "--typography_fluid-arial-pow-fluid",
      "referencePaths": [
        "typography_fluid.arial.pow.narrow",
        "typography_fluid.arial.pow.wide",
      ],
      "sourcePath": "typography_fluid.arial.pow.fluid",
      "tier": "semantic",
      "type": "typography",
      "value": "clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem)",
      "variable": "--typography_fluid-arial-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.at-narrow",
    {
      "key": "--typography_fluid-arial-pow-at-narrow",
      "referencePaths": [
        "typography_fluid.arial.pow.size-narrow",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-narrow",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)))",
      "variable": "--typography_fluid-arial-pow-at-narrow: calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)));",
    },
  ],
  [
    "typography_fluid.arial.pow.at-wide",
    {
      "key": "--typography_fluid-arial-pow-at-wide",
      "referencePaths": [
        "typography_fluid.arial.pow.size-wide",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-wide",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid))",
      "variable": "--typography_fluid-arial-pow-at-wide: calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid));",
    },
  ],
  [
    "typography_fluid.arial.pow@2xl",
    {
      "key": "--typography_fluid-arial-pow-2xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@2xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3))",
      "variable": "--typography_fluid-arial-pow-2xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3));",
    },
  ],
  [
    "typography_fluid.arial.pow@xl",
    {
      "key": "--typography_fluid-arial-pow-xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2))",
      "variable": "--typography_fluid-arial-pow-xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2));",
    },
  ],
  [
    "typography_fluid.arial.pow@l",
    {
      "key": "--typography_fluid-arial-pow-l",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@l",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide))",
      "variable": "--typography_fluid-arial-pow-l: calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@m",
    {
      "key": "--typography_fluid-arial-pow-m",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.at-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@m",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide))",
      "variable": "--typography_fluid-arial-pow-m: calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@s",
    {
      "key": "--typography_fluid-arial-pow-s",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@s",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow))",
      "variable": "--typography_fluid-arial-pow-s: calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow));",
    },
  ],
  [
    "typography_fluid.arial.pow@xs",
    {
      "key": "--typography_fluid-arial-pow-xs",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@xs",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2))",
      "variable": "--typography_fluid-arial-pow-xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2));",
    },
  ],
  [
    "typography_fluid.arial.pow@2xs",
    {
      "key": "--typography_fluid-arial-pow-2xs",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@2xs",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3))",
      "variable": "--typography_fluid-arial-pow-2xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3));",
    },
  ],
  [
    "typography.weight.arial.regular",
    {
      "key": "--typography-weight-arial-regular",
      "sourcePath": "typography.weight.arial.regular",
      "tier": "primitive",
      "type": "typography",
      "value": "500",
      "variable": "--typography-weight-arial-regular: 500;",
    },
  ],
]
`;

exports[`processTypography - generates correct CSS variables 1`] = `
{
  "root": "--typography_fluid-arial-4xl: clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem);
--typography_fluid-arial-3xl: clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem);
--typography_fluid-arial-2xl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);
--typography_fluid-arial-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);
--typography_fluid-arial-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);
--typography_fluid-arial-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);
--typography_fluid-arial-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);
--typography_fluid-arial-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);
--typography_fluid-arial-2xs: clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem);
--typography_fluid-arial-pow-narrow: 20;
--typography_fluid-arial-pow-wide: 89.6875;
--typography_fluid-arial-pow-size-narrow: 0.875;
--typography_fluid-arial-pow-size-wide: 1;
--typography_fluid-arial-pow-ratio-narrow: 1.25;
--typography_fluid-arial-pow-ratio-wide: 1.25;
--typography_fluid-arial-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem);
--typography_fluid-arial-pow-at-narrow: calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)));
--typography_fluid-arial-pow-at-wide: calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid));
--typography_fluid-arial-pow-4xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 5) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 5));
--typography_fluid-arial-pow-3xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 4) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 4));
--typography_fluid-arial-pow-2xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3));
--typography_fluid-arial-pow-xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2));
--typography_fluid-arial-pow-l: calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide));
--typography_fluid-arial-pow-m: calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide));
--typography_fluid-arial-pow-s: calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow));
--typography_fluid-arial-pow-xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2));
--typography_fluid-arial-pow-2xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3));",
}
`;

exports[`processTypography - generates correct CSS variables 2`] = `
[
  [
    "typography_fluid.arial@4xl",
    {
      "key": "--typography_fluid-arial-4xl",
      "sourcePath": "typography_fluid.arial@4xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem)",
      "variable": "--typography_fluid-arial-4xl: clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem);",
    },
  ],
  [
    "typography_fluid.arial@3xl",
    {
      "key": "--typography_fluid-arial-3xl",
      "sourcePath": "typography_fluid.arial@3xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem)",
      "variable": "--typography_fluid-arial-3xl: clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem);",
    },
  ],
  [
    "typography_fluid.arial@2xl",
    {
      "key": "--typography_fluid-arial-2xl",
      "sourcePath": "typography_fluid.arial@2xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem)",
      "variable": "--typography_fluid-arial-2xl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);",
    },
  ],
  [
    "typography_fluid.arial@xl",
    {
      "key": "--typography_fluid-arial-xl",
      "sourcePath": "typography_fluid.arial@xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem)",
      "variable": "--typography_fluid-arial-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);",
    },
  ],
  [
    "typography_fluid.arial@l",
    {
      "key": "--typography_fluid-arial-l",
      "sourcePath": "typography_fluid.arial@l",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem)",
      "variable": "--typography_fluid-arial-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);",
    },
  ],
  [
    "typography_fluid.arial@m",
    {
      "key": "--typography_fluid-arial-m",
      "sourcePath": "typography_fluid.arial@m",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem)",
      "variable": "--typography_fluid-arial-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);",
    },
  ],
  [
    "typography_fluid.arial@s",
    {
      "key": "--typography_fluid-arial-s",
      "sourcePath": "typography_fluid.arial@s",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem)",
      "variable": "--typography_fluid-arial-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);",
    },
  ],
  [
    "typography_fluid.arial@xs",
    {
      "key": "--typography_fluid-arial-xs",
      "sourcePath": "typography_fluid.arial@xs",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem)",
      "variable": "--typography_fluid-arial-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);",
    },
  ],
  [
    "typography_fluid.arial@2xs",
    {
      "key": "--typography_fluid-arial-2xs",
      "sourcePath": "typography_fluid.arial@2xs",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem)",
      "variable": "--typography_fluid-arial-2xs: clamp(0.448rem, 0.4296rem + 0.0918vw, 0.512rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.narrow",
    {
      "key": "--typography_fluid-arial-pow-narrow",
      "sourcePath": "typography_fluid.arial.pow.narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "20",
      "variable": "--typography_fluid-arial-pow-narrow: 20;",
    },
  ],
  [
    "typography_fluid.arial.pow.wide",
    {
      "key": "--typography_fluid-arial-pow-wide",
      "sourcePath": "typography_fluid.arial.pow.wide",
      "tier": "primitive",
      "type": "typography",
      "value": "89.6875",
      "variable": "--typography_fluid-arial-pow-wide: 89.6875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-narrow",
    {
      "key": "--typography_fluid-arial-pow-size-narrow",
      "sourcePath": "typography_fluid.arial.pow.size-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "0.875",
      "variable": "--typography_fluid-arial-pow-size-narrow: 0.875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-wide",
    {
      "key": "--typography_fluid-arial-pow-size-wide",
      "sourcePath": "typography_fluid.arial.pow.size-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1",
      "variable": "--typography_fluid-arial-pow-size-wide: 1;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-narrow",
    {
      "key": "--typography_fluid-arial-pow-ratio-narrow",
      "sourcePath": "typography_fluid.arial.pow.ratio-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-pow-ratio-narrow: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-wide",
    {
      "key": "--typography_fluid-arial-pow-ratio-wide",
      "sourcePath": "typography_fluid.arial.pow.ratio-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-pow-ratio-wide: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.fluid",
    {
      "key": "--typography_fluid-arial-pow-fluid",
      "referencePaths": [
        "typography_fluid.arial.pow.narrow",
        "typography_fluid.arial.pow.wide",
      ],
      "sourcePath": "typography_fluid.arial.pow.fluid",
      "tier": "semantic",
      "type": "typography",
      "value": "clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem)",
      "variable": "--typography_fluid-arial-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-pow-narrow) * 1rem) / (var(--typography_fluid-arial-pow-wide) - var(--typography_fluid-arial-pow-narrow)), 1rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.at-narrow",
    {
      "key": "--typography_fluid-arial-pow-at-narrow",
      "referencePaths": [
        "typography_fluid.arial.pow.size-narrow",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-narrow",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)))",
      "variable": "--typography_fluid-arial-pow-at-narrow: calc(var(--typography_fluid-arial-pow-size-narrow) * (1rem - var(--typography_fluid-arial-pow-fluid)));",
    },
  ],
  [
    "typography_fluid.arial.pow.at-wide",
    {
      "key": "--typography_fluid-arial-pow-at-wide",
      "referencePaths": [
        "typography_fluid.arial.pow.size-wide",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-wide",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid))",
      "variable": "--typography_fluid-arial-pow-at-wide: calc(var(--typography_fluid-arial-pow-size-wide) * var(--typography_fluid-arial-pow-fluid));",
    },
  ],
  [
    "typography_fluid.arial.pow@4xl",
    {
      "key": "--typography_fluid-arial-pow-4xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@4xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 5) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 5))",
      "variable": "--typography_fluid-arial-pow-4xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 5) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 5));",
    },
  ],
  [
    "typography_fluid.arial.pow@3xl",
    {
      "key": "--typography_fluid-arial-pow-3xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@3xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 4) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 4))",
      "variable": "--typography_fluid-arial-pow-3xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 4) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 4));",
    },
  ],
  [
    "typography_fluid.arial.pow@2xl",
    {
      "key": "--typography_fluid-arial-pow-2xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@2xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3))",
      "variable": "--typography_fluid-arial-pow-2xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 3) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 3));",
    },
  ],
  [
    "typography_fluid.arial.pow@xl",
    {
      "key": "--typography_fluid-arial-pow-xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2))",
      "variable": "--typography_fluid-arial-pow-xl: calc(var(--typography_fluid-arial-pow-at-narrow) * pow(var(--typography_fluid-arial-pow-ratio-narrow), 2) + var(--typography_fluid-arial-pow-at-wide) * pow(var(--typography_fluid-arial-pow-ratio-wide), 2));",
    },
  ],
  [
    "typography_fluid.arial.pow@l",
    {
      "key": "--typography_fluid-arial-pow-l",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@l",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide))",
      "variable": "--typography_fluid-arial-pow-l: calc(var(--typography_fluid-arial-pow-at-narrow) * var(--typography_fluid-arial-pow-ratio-narrow) + var(--typography_fluid-arial-pow-at-wide) * var(--typography_fluid-arial-pow-ratio-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@m",
    {
      "key": "--typography_fluid-arial-pow-m",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.at-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@m",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide))",
      "variable": "--typography_fluid-arial-pow-m: calc(var(--typography_fluid-arial-pow-at-narrow) + var(--typography_fluid-arial-pow-at-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@s",
    {
      "key": "--typography_fluid-arial-pow-s",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@s",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow))",
      "variable": "--typography_fluid-arial-pow-s: calc(var(--typography_fluid-arial-pow-m) / var(--typography_fluid-arial-pow-ratio-narrow));",
    },
  ],
  [
    "typography_fluid.arial.pow@xs",
    {
      "key": "--typography_fluid-arial-pow-xs",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@xs",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2))",
      "variable": "--typography_fluid-arial-pow-xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 2));",
    },
  ],
  [
    "typography_fluid.arial.pow@2xs",
    {
      "key": "--typography_fluid-arial-pow-2xs",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@2xs",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3))",
      "variable": "--typography_fluid-arial-pow-2xs: calc(var(--typography_fluid-arial-pow-m) / pow(var(--typography_fluid-arial-pow-ratio-narrow), 3));",
    },
  ],
]
`;

exports[`typography - can handle custom labels and prefixes 1`] = `
{
  "root": "--typography_fluid-arial-text-h1: clamp(4.1723rem, 4.0013rem + 0.8553vw, 4.7684rem);
--typography_fluid-arial-text-h2: clamp(3.3379rem, 3.201rem + 0.6843vw, 3.8147rem);
--typography_fluid-arial-text-h3: clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem);
--typography_fluid-arial-text-h4: clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem);
--typography_fluid-arial-text-xxl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);
--typography_fluid-arial-text-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);
--typography_fluid-arial-text-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);
--typography_fluid-arial-text-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);
--typography_fluid-arial-text-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);
--typography_fluid-arial-text-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);
--typography_fluid-arial-text-pow-narrow: 20;
--typography_fluid-arial-text-pow-wide: 89.6875;
--typography_fluid-arial-text-pow-size-narrow: 0.875;
--typography_fluid-arial-text-pow-size-wide: 1;
--typography_fluid-arial-text-pow-ratio-narrow: 1.25;
--typography_fluid-arial-text-pow-ratio-wide: 1.25;
--typography_fluid-arial-text-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-text-pow-narrow) * 1rem) / (var(--typography_fluid-arial-text-pow-wide) - var(--typography_fluid-arial-text-pow-narrow)), 1rem);
--typography_fluid-arial-text-pow-at-narrow: calc(var(--typography_fluid-arial-text-pow-size-narrow) * (1rem - var(--typography_fluid-arial-text-pow-fluid)));
--typography_fluid-arial-text-pow-at-wide: calc(var(--typography_fluid-arial-text-pow-size-wide) * var(--typography_fluid-arial-text-pow-fluid));
--typography_fluid-arial-text-pow-h1: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 7) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 7));
--typography_fluid-arial-text-pow-h2: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 6) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 6));
--typography_fluid-arial-text-pow-h3: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 5) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 5));
--typography_fluid-arial-text-pow-h4: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 4) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 4));
--typography_fluid-arial-text-pow-xxl: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 3) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 3));
--typography_fluid-arial-text-pow-xl: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 2));
--typography_fluid-arial-text-pow-l: calc(var(--typography_fluid-arial-text-pow-at-narrow) * var(--typography_fluid-arial-text-pow-ratio-narrow) + var(--typography_fluid-arial-text-pow-at-wide) * var(--typography_fluid-arial-text-pow-ratio-wide));
--typography_fluid-arial-text-pow-m: calc(var(--typography_fluid-arial-text-pow-at-narrow) + var(--typography_fluid-arial-text-pow-at-wide));
--typography_fluid-arial-text-pow-s: calc(var(--typography_fluid-arial-text-pow-m) / var(--typography_fluid-arial-text-pow-ratio-narrow));
--typography_fluid-arial-text-pow-xs: calc(var(--typography_fluid-arial-text-pow-m) / pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2));",
}
`;

exports[`typography - can handle custom labels and prefixes 2`] = `
[
  [
    "typography_fluid.arial@h1",
    {
      "key": "--typography_fluid-arial-text-h1",
      "sourcePath": "typography_fluid.arial@h1",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(4.1723rem, 4.0013rem + 0.8553vw, 4.7684rem)",
      "variable": "--typography_fluid-arial-text-h1: clamp(4.1723rem, 4.0013rem + 0.8553vw, 4.7684rem);",
    },
  ],
  [
    "typography_fluid.arial@h2",
    {
      "key": "--typography_fluid-arial-text-h2",
      "sourcePath": "typography_fluid.arial@h2",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(3.3379rem, 3.201rem + 0.6843vw, 3.8147rem)",
      "variable": "--typography_fluid-arial-text-h2: clamp(3.3379rem, 3.201rem + 0.6843vw, 3.8147rem);",
    },
  ],
  [
    "typography_fluid.arial@h3",
    {
      "key": "--typography_fluid-arial-text-h3",
      "sourcePath": "typography_fluid.arial@h3",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem)",
      "variable": "--typography_fluid-arial-text-h3: clamp(2.6703rem, 2.5608rem + 0.5474vw, 3.0518rem);",
    },
  ],
  [
    "typography_fluid.arial@h4",
    {
      "key": "--typography_fluid-arial-text-h4",
      "sourcePath": "typography_fluid.arial@h4",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem)",
      "variable": "--typography_fluid-arial-text-h4: clamp(2.1362rem, 2.0486rem + 0.4379vw, 2.4414rem);",
    },
  ],
  [
    "typography_fluid.arial@xxl",
    {
      "key": "--typography_fluid-arial-text-xxl",
      "sourcePath": "typography_fluid.arial@xxl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem)",
      "variable": "--typography_fluid-arial-text-xxl: clamp(1.709rem, 1.6389rem + 0.3503vw, 1.9531rem);",
    },
  ],
  [
    "typography_fluid.arial@xl",
    {
      "key": "--typography_fluid-arial-text-xl",
      "sourcePath": "typography_fluid.arial@xl",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem)",
      "variable": "--typography_fluid-arial-text-xl: clamp(1.3672rem, 1.3111rem + 0.2803vw, 1.5625rem);",
    },
  ],
  [
    "typography_fluid.arial@l",
    {
      "key": "--typography_fluid-arial-text-l",
      "sourcePath": "typography_fluid.arial@l",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem)",
      "variable": "--typography_fluid-arial-text-l: clamp(1.0938rem, 1.0489rem + 0.2242vw, 1.25rem);",
    },
  ],
  [
    "typography_fluid.arial@m",
    {
      "key": "--typography_fluid-arial-text-m",
      "sourcePath": "typography_fluid.arial@m",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem)",
      "variable": "--typography_fluid-arial-text-m: clamp(0.875rem, 0.8391rem + 0.1794vw, 1rem);",
    },
  ],
  [
    "typography_fluid.arial@s",
    {
      "key": "--typography_fluid-arial-text-s",
      "sourcePath": "typography_fluid.arial@s",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem)",
      "variable": "--typography_fluid-arial-text-s: clamp(0.7rem, 0.6713rem + 0.1435vw, 0.8rem);",
    },
  ],
  [
    "typography_fluid.arial@xs",
    {
      "key": "--typography_fluid-arial-text-xs",
      "sourcePath": "typography_fluid.arial@xs",
      "tier": "primitive",
      "type": "typography",
      "value": "clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem)",
      "variable": "--typography_fluid-arial-text-xs: clamp(0.56rem, 0.537rem + 0.1148vw, 0.64rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.narrow",
    {
      "key": "--typography_fluid-arial-text-pow-narrow",
      "sourcePath": "typography_fluid.arial.pow.narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "20",
      "variable": "--typography_fluid-arial-text-pow-narrow: 20;",
    },
  ],
  [
    "typography_fluid.arial.pow.wide",
    {
      "key": "--typography_fluid-arial-text-pow-wide",
      "sourcePath": "typography_fluid.arial.pow.wide",
      "tier": "primitive",
      "type": "typography",
      "value": "89.6875",
      "variable": "--typography_fluid-arial-text-pow-wide: 89.6875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-narrow",
    {
      "key": "--typography_fluid-arial-text-pow-size-narrow",
      "sourcePath": "typography_fluid.arial.pow.size-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "0.875",
      "variable": "--typography_fluid-arial-text-pow-size-narrow: 0.875;",
    },
  ],
  [
    "typography_fluid.arial.pow.size-wide",
    {
      "key": "--typography_fluid-arial-text-pow-size-wide",
      "sourcePath": "typography_fluid.arial.pow.size-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1",
      "variable": "--typography_fluid-arial-text-pow-size-wide: 1;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-narrow",
    {
      "key": "--typography_fluid-arial-text-pow-ratio-narrow",
      "sourcePath": "typography_fluid.arial.pow.ratio-narrow",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-text-pow-ratio-narrow: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.ratio-wide",
    {
      "key": "--typography_fluid-arial-text-pow-ratio-wide",
      "sourcePath": "typography_fluid.arial.pow.ratio-wide",
      "tier": "primitive",
      "type": "typography",
      "value": "1.25",
      "variable": "--typography_fluid-arial-text-pow-ratio-wide: 1.25;",
    },
  ],
  [
    "typography_fluid.arial.pow.fluid",
    {
      "key": "--typography_fluid-arial-text-pow-fluid",
      "referencePaths": [
        "typography_fluid.arial.pow.narrow",
        "typography_fluid.arial.pow.wide",
      ],
      "sourcePath": "typography_fluid.arial.pow.fluid",
      "tier": "semantic",
      "type": "typography",
      "value": "clamp(0rem, (100vw - var(--typography_fluid-arial-text-pow-narrow) * 1rem) / (var(--typography_fluid-arial-text-pow-wide) - var(--typography_fluid-arial-text-pow-narrow)), 1rem)",
      "variable": "--typography_fluid-arial-text-pow-fluid: clamp(0rem, (100vw - var(--typography_fluid-arial-text-pow-narrow) * 1rem) / (var(--typography_fluid-arial-text-pow-wide) - var(--typography_fluid-arial-text-pow-narrow)), 1rem);",
    },
  ],
  [
    "typography_fluid.arial.pow.at-narrow",
    {
      "key": "--typography_fluid-arial-text-pow-at-narrow",
      "referencePaths": [
        "typography_fluid.arial.pow.size-narrow",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-narrow",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-size-narrow) * (1rem - var(--typography_fluid-arial-text-pow-fluid)))",
      "variable": "--typography_fluid-arial-text-pow-at-narrow: calc(var(--typography_fluid-arial-text-pow-size-narrow) * (1rem - var(--typography_fluid-arial-text-pow-fluid)));",
    },
  ],
  [
    "typography_fluid.arial.pow.at-wide",
    {
      "key": "--typography_fluid-arial-text-pow-at-wide",
      "referencePaths": [
        "typography_fluid.arial.pow.size-wide",
        "typography_fluid.arial.pow.fluid",
      ],
      "sourcePath": "typography_fluid.arial.pow.at-wide",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-size-wide) * var(--typography_fluid-arial-text-pow-fluid))",
      "variable": "--typography_fluid-arial-text-pow-at-wide: calc(var(--typography_fluid-arial-text-pow-size-wide) * var(--typography_fluid-arial-text-pow-fluid));",
    },
  ],
  [
    "typography_fluid.arial.pow@h1",
    {
      "key": "--typography_fluid-arial-text-pow-h1",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@h1",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 7) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 7))",
      "variable": "--typography_fluid-arial-text-pow-h1: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 7) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 7));",
    },
  ],
  [
    "typography_fluid.arial.pow@h2",
    {
      "key": "--typography_fluid-arial-text-pow-h2",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@h2",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 6) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 6))",
      "variable": "--typography_fluid-arial-text-pow-h2: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 6) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 6));",
    },
  ],
  [
    "typography_fluid.arial.pow@h3",
    {
      "key": "--typography_fluid-arial-text-pow-h3",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@h3",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 5) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 5))",
      "variable": "--typography_fluid-arial-text-pow-h3: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 5) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 5));",
    },
  ],
  [
    "typography_fluid.arial.pow@h4",
    {
      "key": "--typography_fluid-arial-text-pow-h4",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@h4",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 4) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 4))",
      "variable": "--typography_fluid-arial-text-pow-h4: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 4) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 4));",
    },
  ],
  [
    "typography_fluid.arial.pow@xxl",
    {
      "key": "--typography_fluid-arial-text-pow-xxl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@xxl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 3) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 3))",
      "variable": "--typography_fluid-arial-text-pow-xxl: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 3) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 3));",
    },
  ],
  [
    "typography_fluid.arial.pow@xl",
    {
      "key": "--typography_fluid-arial-text-pow-xl",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@xl",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 2))",
      "variable": "--typography_fluid-arial-text-pow-xl: calc(var(--typography_fluid-arial-text-pow-at-narrow) * pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2) + var(--typography_fluid-arial-text-pow-at-wide) * pow(var(--typography_fluid-arial-text-pow-ratio-wide), 2));",
    },
  ],
  [
    "typography_fluid.arial.pow@l",
    {
      "key": "--typography_fluid-arial-text-pow-l",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.ratio-narrow",
        "typography_fluid.arial.pow.at-wide",
        "typography_fluid.arial.pow.ratio-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@l",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) * var(--typography_fluid-arial-text-pow-ratio-narrow) + var(--typography_fluid-arial-text-pow-at-wide) * var(--typography_fluid-arial-text-pow-ratio-wide))",
      "variable": "--typography_fluid-arial-text-pow-l: calc(var(--typography_fluid-arial-text-pow-at-narrow) * var(--typography_fluid-arial-text-pow-ratio-narrow) + var(--typography_fluid-arial-text-pow-at-wide) * var(--typography_fluid-arial-text-pow-ratio-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@m",
    {
      "key": "--typography_fluid-arial-text-pow-m",
      "referencePaths": [
        "typography_fluid.arial.pow.at-narrow",
        "typography_fluid.arial.pow.at-wide",
      ],
      "sourcePath": "typography_fluid.arial.pow@m",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-at-narrow) + var(--typography_fluid-arial-text-pow-at-wide))",
      "variable": "--typography_fluid-arial-text-pow-m: calc(var(--typography_fluid-arial-text-pow-at-narrow) + var(--typography_fluid-arial-text-pow-at-wide));",
    },
  ],
  [
    "typography_fluid.arial.pow@s",
    {
      "key": "--typography_fluid-arial-text-pow-s",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@s",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-m) / var(--typography_fluid-arial-text-pow-ratio-narrow))",
      "variable": "--typography_fluid-arial-text-pow-s: calc(var(--typography_fluid-arial-text-pow-m) / var(--typography_fluid-arial-text-pow-ratio-narrow));",
    },
  ],
  [
    "typography_fluid.arial.pow@xs",
    {
      "key": "--typography_fluid-arial-text-pow-xs",
      "referencePaths": [
        "typography_fluid.arial.pow@m",
        "typography_fluid.arial.pow.ratio-narrow",
      ],
      "sourcePath": "typography_fluid.arial.pow@xs",
      "tier": "semantic",
      "type": "typography",
      "value": "calc(var(--typography_fluid-arial-text-pow-m) / pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2))",
      "variable": "--typography_fluid-arial-text-pow-xs: calc(var(--typography_fluid-arial-text-pow-m) / pow(var(--typography_fluid-arial-text-pow-ratio-narrow), 2));",
    },
  ],
]
`;
